--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <button class="key number" value="5">5</button>
         <button class="key number" value="6">6</button>
         <button class="key operator" value="-">-</button>
-        <button class="key number" value="1">1</button>
-        <button class="key number" value="2">2</button>
+        <button class="key number" id="uno" value="1">1</button>
+        <button class="key number" id="dos" value="2">2</button>
         <button class="key number" value="3">3</button>
         <button class="key operator" value="+">+</button>
         <button class="key number" value="0">0</button>
@@ -56,4 +56,3 @@
     <script src="/main.js"></script>
   </body>
 </html>
-© 2021 GitHub, Inc.
